[package]
name = "addr-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.9" }
bitcoin = { version = "0.32" }
bitcoin_slices = { version = "0.8" }
env_logger = "0.11"
log = "0.4"